# vectormesh

./: .gitignore  .lefthook.yml  CLAUDE.md  Makefile  README.md  demo1_serial.html  demo2_parallel.html  demo3_fusion.html  demo4_learn.html  demo5_debug.html  pyproject.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-2-huggingface-textvectorizer.md  1-3-vectorcache-persistence-storage.md  1-4-parameter-free-aggregation.md  1-5-model-introspection-2d-3d-support.md  2-1-combinators-serial-parallel.md  2-3-connectors-concat-stack.md  2-4-gating-mechanisms.md  2-5-complex-gating.md  2-6-component-visualization.md  3-1-regexvectorizer.md  5-1-mcp-server-basic.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  step2_draft.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: README.md
examples/: cache_jsonl_example.py  demo.py  interactive_visualization_demo.py  vectorization_demo.py  visualization_demo.py
notebooks/: 0_vectorizer.ipynb  1_training.ipynb  2_design.ipynb  3_moe.ipynb
scripts/: build_dataset.py  create_cache.py  embed_debertav3.py  embed_legal_dutch.py  embed_multilegal.py
src/vectormesh/: __init__.py  base.py  errors.py  types.py  utils.py  validation.py
tests/: test_base.py  test_errors.py  test_runtime_check.py  test_types.py  test_visualization.py
tests/components/: __init__.py  test_aggregation.py  test_aggregation_types.py  test_combinators.py  test_complex_gating.py  test_gating.py  (+6 more)
(+38 files in other folders)
